--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -391,6 +391,8 @@
               </h4>
               <p class="timeline-text">
                 Personal Portfolio Useing(Angular , Bootstrap)
+                <br><br>
+                      <a href="https://nafezly.com/portfolio/26445-Personal-Portfolio" target="_blank" class="btn btn-outline-primary  btn-sm">   Show Project</a>
                 
                </p>
           </div>
